--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,3 +1,8 @@
 .home-info .entry-content p:not(:last-child) {
   margin-bottom: 1rem;
 }
+
+code.language-markdown {
+  white-space: pre-wrap;
+  word-break: break-word !important;
+}
