--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -6,3 +6,8 @@ code.language-markdown {
   white-space: pre-wrap;
   word-break: break-word !important;
 }
+
+#newsletter-container .formkit-form {
+  border: 1px solid var(--border);
+  border-radius: var(--radius);
+}
