update analytics and comments domain

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,4 +1,4 @@
-<script defer src="https://comentario.culturegremlin.club/comentario.js"></script>
+<script defer src="https://comentario.skylerlemay.com/comentario.js"></script>
 <comentario-comments id="comments-container"></comentario-comments>
 <script defer>
   (function() {
