--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -70,6 +70,7 @@
     </div>
   {{- end -}}
 
+  {{- partial "buy_me_a_coffee.html" . -}}
   {{- partial "newsletter.html" -}}
 
   <footer class="post-footer">
